# BHPL-Internship-Work

./: .env-example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  pyproject.toml
docs/: Vendor Management.dbml  Week 1.dbml
intranet/: app.py  checker_server.py  server.py  tasks.py
intranet/decorators/: require_dept.py  require_login.py  require_type.py
intranet/endpoints/: HTTP_404.py  __init__.py  announcements.py  connectivity.py  create_announcement.py  create_location.py  edit_location.py  home.py  index.py  locations.py  login.py  payments.py  reward_bells.py  rewards.py  rnr.py  sales.py  vendors.py
intranet/models/: contract_payment.py  employee.py  expense.py  location.py  vendor_contract.py
src/: db.js  middleware.js  pool-manager.js
src/components/: Card.astro  NavBar.astro
src/layouts/: Layout.astro
src/pages/: connectivity.astro  home.astro  locations.astro  login.astro  sales.astro  vendors.astro
static/css/: announcement_template.css  connectivity.css  create_form.css  expense_claim.css  home.css  locations.css  login.css  nav.css  reward_bells.css  rewards.css  styles.css  vendor_contract.css  vendor_form.css
static/js/: announcements.js  connectivity.js  create_annoucement.js  create_announcement.js  (+11 more)
templates/: 404.html  _empty.html  announcement_template.html  connectivity.html  create_announcement.html  create_site.html  edit_site.html  expense_claim_template.html  expense_report.html  expenses.html  home.html  index.html  locations.html  login.html  reward_bells.html  rnr.html  sales.html  vendors.html
(+89 files in other folders)
